# Progrado

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: README.md
include/: AddCourseScreen.h  Course.h  CreateAccountScreen.h  DBConnector.h  ListAllCoursesScreen.h  LoginErrorScreen.h  LoginScreen.h  MainMenuScreen.h  Progrado.h  RemoveCourseScreen.h  ScheduleSummaryScreen.h  Screen.h  Ui.h  UpdateCourseScreen.h  User.h  UserInterface.h  add_course.h  create_account.h  delete_acct.h  home.h  init.h  login.h  modify_course.h  modify_user_details.h  remove_course.h  retrieve_user_details.h  screen.h  search_course.h  sqlite3.h  view_course.h  view_user_details.h
src/: AddCourseScreen.cpp  CMakeLists.txt  CreateAccountScreen.cpp  ListAllCoursesScreen.cpp  LoginErrorScreen.cpp  LoginScreen.cpp  MainMenuScreen.cpp  Progrado.pro  RemoveCourseScreen.cpp  ScheduleSummaryScreen.cpp  UpdateCourseScreen.cpp  User.cpp  UserInterface.cpp  login.cpp  main.cpp  progrado.cpp
src/db/: Course.cpp  DBConnector.cpp
src/sqlite/: CMakeLists.txt
src/ui/: AddCourseScreen.cpp  CreateAccountScreen.cpp  ListAllCoursesScreen.cpp  LoginErrorScreen.cpp  LoginScreen.cpp  MainMenuScreen.cpp  RemoveCourseScreen.cpp  ScheduleSummaryScreen.cpp  Ui.cpp  Ui.cpp.orig  UpdateCourseScreen.cpp  add_course.cpp  create_account.cpp  delete_acct.cpp  home.cpp  init.cpp  login.cpp  modify_course.cpp  modify_user_details.cpp  remove_course.cpp  retrieve_user_details.cpp  screen.cpp  search_course.cpp  view_course.cpp  view_user_details.cpp
test/: .~lock.result.csv#  a.out  log.txt  progrado-prompt-plan.txt  progrado.db  prompt_test  result.csv  test  testDBConn.cpp  test_Course.cpp  test_DBConnector.cpp  test_User.cpp
